Fixed form input spacing problem

--- a/public/css/palabras.css
+++ b/public/css/palabras.css
@@ -47,3 +47,7 @@ tr.mistake {
 td.actions {
   white-space: nowrap;
 }
+
+.form-inline input {
+  margin-right: 5px;
+}
